[package]
name = "playground-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-epoch"] }
do-notation = "0.1.3"
lockfree = "0.5.1"
num = "0.4.3"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
